feat: 新增API, 报警管理.活跃事件和报警、报警管理.历史事件和报警
